core/testing/error_snapshots/type/invalid_type_for_op.snap
### TITLE ###
Invalid type for operation
### INPUT ###
x = 5
print(x + "hello")
### EXPECTED ###
error[RAD30002]: Invalid operand types: cannot do 'int + str'
  --> <script>:2:7
  |
1 | x = 5
2 | print(x + "hello")
  |       ^^^^^^^^^^^
  |
   = info: rad explain RAD30002

